# JedlikCpp

./: CMakeLists.txt  main.cpp
Utils/: GameManager.cpp  WorldUtils.cpp
WorldObjects/: Pipe.cpp  Wall.cpp  World.cpp  WorldUtils.cpp
characters/: Player.cpp
headers/: GameManager.h  Pipe.h  Player.h  Wall.h  World.h  WorldObject.h  WorldUtils.h  configs.h
